--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.34.0
-pandas>=2.0.0
-numpy>=1.24.0
-sentence-transformers>=2.2.2
-openai>=0.27.0
+streamlit
+pandas
+numpy
+sentence-transformers
+transformers
+torch
